# rust_4x8

./: .gitignore  Cargo.toml  README.md  analyze.py  build.rs  plot_lr_finder.py  tauri.conf.json  test_ai.md
.cargo/: config.toml
.github/: copilot-instructions.md
frontend/: index.html  main.js  main_tauri.js  styles.css
proto/: banqi.proto
python/: clear_db.py  constant.py  inference_service.py  nn_model.py  requirements.txt  test_overfit.py  training_service.py
scripts/: generate_proto.sh  start_training.sh  stop_training.sh
src/: data_collector.rs  database.rs  game_env.rs  game_env.rs.bak  inference.rs  lib.rs  local_evaluator.rs  lr_finder.rs  main.rs  mcts.rs  mongodb_storage.rs  nn_model.rs  parallel_train.rs  rpc.rs  run_lr_finder.rs  scenario_validation.rs  self_play.rs  tauri_main.rs  test_observation.rs  train.rs  train_from_db.rs  training.rs  training_log.rs  verify.rs  verify_2.rs  verify_samples.rs  verify_trained.rs
src/ai/: mcts_dl.rs  mod.rs  random.rs  reveal_first.rs
src/game_env/: actions.rs  bitboard.rs  board.rs  constants.rs  features.rs  mod.rs  rules.rs  types.rs
src/mcts/: budget.rs  config.rs  evaluator.rs  mod.rs  node.rs  search.rs
