[package]
name = "banqi_4x8"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "4x8 Dark Chess game environment for reinforcement learning"
license = "MIT"
default-run = "banqi-tauri"

[lib]
name = "banqi_4x8"
path = "src/lib.rs"

[[bin]]
name = "banqi"
path = "src/main.rs"

[[bin]]
name = "banqi-tauri"
path = "src/tauri_main.rs"

[[bin]]
name = "banqi-data-collector"
path = "src/data_collector.rs"
required-features = ["torch"]

[dependencies]
rand = "0.8"
rand_distr = "0.4"
fixedbitset = "0.5"
ndarray = "0.15"
slab = "0.4"
tauri = { version = "2.10.2", features = [] }
tauri-plugin-shell = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
num_cpus = "1.17"
mongodb = { version = "3.5" }
bson = "2.15"

# gRPC 依赖 - 保留用于可能的 Python 服务通信
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
futures = "0.3.32"
async-trait ="0.1.89"

# PyTorch 依赖 - 可选，用于本地训练和推理
tch = { version = "0.22", optional = true }

[features]
# 默认不启用 torch 特性
default = []
# torch 特性：启用本地神经网络训练和推理
torch = ["tch"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }
tonic-build = "0.12"

[dev-dependencies]
# 用于测试和示例

[profile.release]
opt-level = 3
lto = true
